Adding examples to api documentation
